fixed lazy loading

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
         <div id="root">
             <div class="loader">
                 <div>
-                    <img src="img/letters/S.png" alt="S" />
-                    <img src="img/letters/T.png" alt="T" />
-                    <img src="img/letters/U.png" alt="U" />
-                    <img src="img/letters/D.png" alt="D" />
-                    <img src="img/letters/Y.png" alt="Y" />
-                    <img src="img/letters/F.png" alt="F" />
-                    <img src="img/letters/I.png" alt="I" />
-                    <img src="img/letters/L.png" alt="L" />
+                    <img src="/img/letters/S.png" alt="S" />
+                    <img src="/img/letters/T.png" alt="T" />
+                    <img src="/img/letters/U.png" alt="U" />
+                    <img src="/img/letters/D.png" alt="D" />
+                    <img src="/img/letters/Y.png" alt="Y" />
+                    <img src="/img/letters/F.png" alt="F" />
+                    <img src="/img/letters/I.png" alt="I" />
+                    <img src="/img/letters/L.png" alt="L" />
                 </div>
             </div>
         </div>
